Ingress2.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: simpleflask2ingress
spec:
  rules:
  - host: svc2.djynet.xyz
    http:
      paths:
      - backend:
          serviceName: simpleflask2svc
          servicePort: 8002
        path: "/"
